# PrisonProblem

./: .gitignore  README.md
cpp/: CMakeLists.txt  Makefile
cpp/src/: box.hpp  main.cpp  run.hpp  types.hpp  utils.hpp
zig/: boxes.zig  main.zig  utils.zig
